--- a/app/src/main/res/layout/activity_singin.xml
+++ b/app/src/main/res/layout/activity_singin.xml
@@ -14,11 +14,11 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="SIGN IN"
-            android:textColor="@color/white"
+            android:text="SIGN UP"
             android:textAlignment="center"
-            android:textStyle="bold"
-            android:textSize="40dp"/>
+            android:textColor="@color/white"
+            android:textSize="40dp"
+            android:textStyle="bold" />
 
 
 
@@ -78,16 +78,15 @@
         </androidx.cardview.widget.CardView>
 
 
-
         <Button
             android:id="@+id/btn_sign_in"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Sign In"
-            android:textSize="30dp"
             android:backgroundTint="#6200EE"
+            android:padding="9dp"
+            android:text="Sign UP"
             android:textColor="#FFFFFF"
-            android:padding="9dp" />
+            android:textSize="30dp" />
         <LinearLayout
             android:id="@+id/socialicons"
             android:layout_width="match_parent"
