change button names

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -84,7 +84,7 @@
         android:id="@+id/signinbt"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Sign In"
+        android:text="Sign up"
         android:layout_marginTop="15dp"
         android:textSize="25dp"
         android:backgroundTint="#0276dc"
