--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -57,7 +57,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Name:"
-                android:textSize="14sp"
+                android:textSize="19sp"
                 android:textStyle="bold"
                 android:layout_marginEnd="8dp" />
 
@@ -81,7 +81,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="Age"
-                android:textSize="15sp"
+                android:textSize="19sp"
                 android:textStyle="bold" />
 
             <TextView
@@ -89,7 +89,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="BMI"
-                android:textSize="15sp"
+                android:textSize="19sp"
                 android:textStyle="bold" />
         </LinearLayout>
 
@@ -106,7 +106,7 @@
                 android:layout_weight="1"
                 android:hint="Enter Age"
                 android:text="25"
-                android:textSize="15sp"
+                android:textSize="19sp"
                 android:inputType="number" />
 
             <EditText
@@ -116,7 +116,7 @@
                 android:layout_weight="1"
                 android:hint="Enter BMI"
                 android:text="22.5"
-                android:textSize="15sp" />
+                android:textSize="19sp" />
         </LinearLayout>
 
         <LinearLayout
@@ -129,7 +129,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Date:"
-                android:textSize="14sp"
+                android:textSize="19sp"
                 android:textStyle="bold"
                 android:layout_marginEnd="8dp" />
 
@@ -151,7 +151,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Counsiller:"
-                android:textSize="14sp"
+                android:textSize="19sp"
                 android:textStyle="bold"
                 android:layout_marginEnd="8dp" />
 
@@ -160,6 +160,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
+                android:textSize="19sp"
 
                 android:text="Dr anura Adhikaro" />
         </LinearLayout>
@@ -175,12 +176,16 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Update"
+                android:backgroundTint="#0b28e0"
+                android:textSize="20sp"
                 android:layout_marginEnd="8dp" />
 
             <Button
                 android:id="@+id/btnDelete"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:textSize="20sp"
+                android:backgroundTint="#e03c0b"
                 android:text="Delete" />
         </LinearLayout>
     </LinearLayout>
